# CPP-Project

./: CMakeLists.txt  main.cpp
include/Core/: Character.h  CharacterData.h
include/Utils/: Logger.h  Types.h
src/Core/: Character.cpp
src/Utils/: Logger.cpp
